--- a/gui/index.html
+++ b/gui/index.html
@@ -38,12 +38,15 @@
     <title>socket.io test</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery-3.1.1.js"></script>
-    <script src="/js/d3-3.5.0.js"></script>
-    <script src="/js/radial-progress-chart.js"></script>
+    <!--<script src="/js/d3-3.5.0.js"></script>//-->
+    <script src="/js/Chart.bundle.min.js"></script>
     <script>
 
-        var value = 0;
-        var myClientId = null;
+        var speed = 0;
+        var speed_max = 100;
+        var my_client_id = null;
+        var my_user_agent = null;
+        var server_url = null;
 
         $(document).ready(function() {
 
@@ -57,51 +60,83 @@
 
             socket.on("welcome", function(data) {
                 console.log(Date.now() + " [socket.io] RECEIVED \"welcome\" event from server: " + data);
-                $("#my_client_id").text(data.client_id);
-                $("#server_url").text(window.location.href);
-                socket.emit("user_agent", navigator.userAgent);
+
+                speed_max = data.speed_max;
+                my_client_id = data.client_id;
+                server_url = window.location.href;
+
+                $("#my_client_id").text(my_client_id);
+                $("#server_url").text(server_url);
+                $("#speed_max").text(speed_max);
+
+                // chart.update({ max: speed_max });
+                // chart.maxValue(speed_max);
+
+                my_user_agent = navigator.userAgent;
+
+                socket.emit("user_agent", my_user_agent);
             });
 
-            socket.on("value_update", function (data) {
-                console.log(Date.now() + " [socket.io] RECEIVING \"value_update\" event from new client: " + data);
+            socket.on("speed_update", function(data) {
+                console.log(Date.now() + " [socket.io] RECEIVING \"speed_update\" event from new client: " + data);
 
-                // Dirty hack, because the chart won't update if value is 0:
-                if (data == 0) {
-                    data = 0.1;
-                }
-
-                chart.update(data);
+                updateSpeedometer(data);
             });
 
             // Create button callbacks:
-            function emitGuiValueUpdate(value) {
-                console.log(Date.now() + " [socket.io] SENDING \"gui_value_update\" event from new client: " + value);
-                socket.emit("gui_value_update", value);
+            function emitGuiSpeedUpdate(speed) {
+                console.log(Date.now() + " [socket.io] SENDING \"gui_speed_update\" event from new client: " + speed);
+                socket.emit("gui_speed_update", speed);
             }
 
             // Create button events:
-            $(".value_minus").on("click", function() {
+            $(".speed_minus").on("click", function() {
                 console.log(Date.now() + " [jquery] button minus pressed");
-                emitGuiValueUpdate(-10);
+                emitGuiSpeedUpdate(-50);
             });
 
-            $(".value_plus").on("click", function() {
+            $(".speed_plus").on("click", function() {
                 console.log(Date.now() + " [jquery] button plus pressed");
-                emitGuiValueUpdate(10);
+                emitGuiSpeedUpdate(50);
             });
+
+            function updateSpeedometer(value) {
+                myChart.data.datasets[0].data = [value, (speed_max - value)];
+                myChart.update();
+            }
 
             // Create speedometer:
-            var chart = new RadialProgressChart('.speedometer', {
-                series: [0],
-                diameter: 360,
-                min: 0,
-                max: 100,
-                animation: {
-                    duration: 1,
-                    delay: 0
+            var canvas = $("#speedometer");
+            var myChart = new Chart(canvas, {
+                type: "doughnut",
+                data: {
+                    datasets: [{
+                        data: 0,
+                        backgroundColor: [
+                            "rgba(42, 112, 255, 1)",
+                            "rgba(255, 255, 255, 1)"
+                        ],
+                        borderColor: [
+                            "rgba(0, 0, 0, 1)",
+                            "rgba(0, 0, 0, 1)"
+                        ],
+                        hoverBackgroundColor: [
+                            "rgba(42, 112, 255, 1)",
+                            "rgba(255, 255, 255, 1)"
+                        ],
+                        borderWidth: 1
+                    }]
                 },
-                center: function(d) {
-                    return d
+                options: {
+                    cutoutPercentage: 70,
+                    circumference: 1.4 * Math.PI,
+                    rotation: 0.8 * Math.PI,
+                    tooltips: {
+                        enabled: false
+                    },
+                    legend: {
+                        display: false
+                    }
                 }
             });
 
@@ -110,14 +145,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="speedometer"></div>
+        <canvas id="speedometer"></canvas>
         <div class="controls">
-            <button class="value_minus">-</button>
-            <button class="value_plus">+</button>
+            <button class="speed_minus">-</button>
+            <button class="speed_plus">+</button>
         </div>
         <div class="info">
             <p>my_client_id: <span id="my_client_id"></span></p>
             <p>server_url: <span id="server_url"></span></p>
+            <p>speed_max: <span id="speed_max"></span></p>
         </div>
     </div>
 </body>
